# directx12-renderer

./: .gitmodules  CMakeLists.txt  README.md  dependencies.cmake  utils.cmake
data/: shader.hlsl
data/shaders/: shader.hlsl
src/: main.cpp  renderer.cpp  renderer.hpp  timer.cpp  timer.hpp
